--- a/src/pages/tydzien8.html
+++ b/src/pages/tydzien8.html
@@ -18,25 +18,23 @@
         <a class="navigation__link" href="tydzien6.html">Tydzień 6</a>
         <a class="navigation__link" href="tydzien7.html">Tydzień 7</a>
         <a class="navigation__link" href="tydzien8.html">Tydzień 8</a>
-        <input type="navigation__checkbox" id="toggle" class="checkbox" />
-        <label for="toggle" class="switch"></label>
       </nav>
     </header>
-    <main class="welcomePage">
-      <header class="main-heading">
-        <h1 class="main-heading--JS">Łukasz Granica - strona domowa z kursu WTF</h1>
+    <main>
+      <header>
+        <h1 class="main-heading">Tydzień 8</h1>
       </header>
-      <section class="welcomeNote">
-        <h2 class="secondary-heading">Kim Jestem?</h2>
-        <p>
-          Hej! Na codzień pracuję jako programista C#, ale pełnię również rolę
-          scrum mastera w firmie Banqsoft. Poza tym lubię grać w piłkę i
-          trenować na siłowni.
-          <br />
-          Mam nadzieję, że znajdziesz na tej stronie, wiele przydatnych rzeczy.
-        </p>
-      </section>
-      <img src="../assets/img/LukaszMateuszGranica_BW.png" alt="Uśmiechnięty Łukasz" class="aside" />
+      <h2 class="secondary-heading">Notatki z WTF: Co ten frontend</h2>
+      <article class="week-summary">
+        <h3 class="week-summary__title">Import / export – koncept + import w stylach</h3>
+        <h4 class="week-summary__title--subtitle">Po co nam te moduły?</h4>
+        <ul class="list">
+          <li>Aplikacje szybko rosną i trudno trzymać wszystko w jednym pliku</li>
+          <li>Checmy korzystać z wybranych funkcji w różnych plikach</li>
+          <li>Chcemy mieć porządek w projekcie</li>
+          <li>Chcemy korzystać z kodu udostępnianego przez innych albo udostępniać swój</li>
+        </ul>
+      </article>
     </main>
     <footer class="footer">
       Strona domowa Łukasza Granicy.
