Make a toggle switch on main page.

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -9,16 +9,14 @@
   <body>
     <header>
       <nav class="navigation">
-        <a class="navigation__link navigation__link--homepage" href="index.html"
-          >Strona główna</a
-        >
+        <a class="navigation__link navigation__link--homepage" href="index.html">Strona główna</a>
         <a class="navigation__link" href="tydzien3.html">Tydzień 3</a>
         <a class="navigation__link" href="tydzien4.html">Tydzień 4</a>
         <a class="navigation__link" href="tydzien5.html">Tydzień 5</a>
         <a class="navigation__link" href="tydzien6.html">Tydzień 6</a>
         <a class="navigation__link" href="tydzien7.html">Tydzień 7</a>
         <a class="navigation__link" href="tydzien8.html">Tydzień 8</a>
-        <input type="navigation__checkbox" id="toggle" class="checkbox" />
+        <input type="checkbox" id="toggle" class="checkbox" />  
         <label for="toggle" class="switch"></label>
       </nav>
     </header>
