implement dark mode on site

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -16,7 +16,7 @@
         <a class="navigation__link" href="tydzien6.html">Tydzień 6</a>
         <a class="navigation__link" href="tydzien7.html">Tydzień 7</a>
         <a class="navigation__link" href="tydzien8.html">Tydzień 8</a>
-        <input type="checkbox" id="toggle" class="checkbox" />  
+        <input type="checkbox" id="toggle" class="navigation__checkbox darkmode--js" />  
         <label for="toggle" class="switch"></label>
       </nav>
     </header>
