--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -10,6 +10,14 @@
     <header>
       <nav class="navigation">
         <a class="navigation__link navigation__link--homepage" href="index.html">Strona główna</a>
+        <div class="navigation__dropdown">
+          <a class="navigation__link navigation__dropdown-toggle" href="#">Geeks Club</a>
+          <div class="navigation__dropdown-content">
+            <a class="navigation__link" href="geeks-club-week1.html">Tydzień 1</a>
+            <a class="navigation__link" href="geeks-club-week2.html">Tydzień 2</a>
+            <!-- Add more weeks as needed -->
+          </div>
+        </div>
         <a class="navigation__link" href="tydzien3.html">Tydzień 3</a>
         <a class="navigation__link" href="tydzien4.html">Tydzień 4</a>
         <a class="navigation__link" href="tydzien5.html">Tydzień 5</a>
