Add checkbox and all other to nav bar.

--- a/src/pages/geeks-club-week1.html
+++ b/src/pages/geeks-club-week1.html
@@ -16,7 +16,14 @@
             <a class="navigation__link" href="geeks-club-week2.html">Tydzień 2</a>
           </div>
         </div>
-        <!-- ... other navigation links ... -->
+        <a class="navigation__link" href="tydzien3.html">Tydzień 3</a>
+        <a class="navigation__link" href="tydzien4.html">Tydzień 4</a>
+        <a class="navigation__link" href="tydzien5.html">Tydzień 5</a>
+        <a class="navigation__link" href="tydzien6.html">Tydzień 6</a>
+        <a class="navigation__link" href="tydzien7.html">Tydzień 7</a>
+        <a class="navigation__link" href="tydzien8.html">Tydzień 8</a>
+        <input type="checkbox" id="toggle" class="navigation__checkbox darkmode--js" />  
+        <label for="toggle" class="switch"></label>
       </nav>
     </header>
     <main>
