--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html lang="pl">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    ${require('../partials/head.html')}
   </head>
 
   <body>
