fix publishing images.

--- a/src/pages/geeks-club-week1.html
+++ b/src/pages/geeks-club-week1.html
@@ -25,26 +25,26 @@
 
         <h3>Example of usage:</h3>
         <p>
-          <img src="../assets/img/breakpointGroup.jpeg" alt="Breakpoint Groups">
+          <img src="./assets/img/breakpointGroup.jpeg" alt="Breakpoint Groups">
           <h2><a href="https://devblogs.microsoft.com/visualstudio/bringing-code-cleanup-on-save-to-visual-studio-2022-17-1-preview-2/">Code Cleanup on Save</a></h2>
         </p>
         <p>
           It had been very frustrating to get failed build, because of unnecessary usings, since we needed to wait 10min to get result that build failed. Then remove usings and run again, so we will get tests results in 0.5h later than expected.
         </p>
         <p>
-          <img src="../assets/img/pipeline.jpeg" alt="Pipeline">
+          <img src="./assets/img/pipeline.jpeg" alt="Pipeline">
         </p>
         <p>
           Now we have solution for this problem!
         </p>
         <p>
-          <img src="../assets/img/cleanupOnSave.jpeg" alt="Code Cleanup">
+          <img src="./assets/img/cleanupOnSave.jpeg" alt="Code Cleanup">
         </p>
         <p>
           And in code cleanup configuration we need to add Remove unnecessary imports or usings, then it will be deleted after save
         </p>
         <p></p>
-          <img src="../assets/img/RemoveUsings.jpeg" alt="Remove usings">
+          <img src="./assets/img/RemoveUsings.jpeg" alt="Remove usings">
         </p>
 
         <h2><a href="https://github.com/wsr-publishing/azure-poor-formatter">Azure Poor Formatter</a></h2>
