--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -22,7 +22,7 @@
           Mam nadzieję, że znajdziesz na tej stronie, wiele przydatnych rzeczy.
         </p>
       </section>
-      <img src="../assets/img/LukaszMateuszGranica_BW.png" alt="Uśmiechnięty Łukasz" class="aside" />
+      <img src="./assets/img/LukaszMateuszGranica_BW.png" alt="Uśmiechnięty Łukasz" class="aside" />
     </main>
     <footer class="footer">
       Strona domowa Łukasza Granicy.
