--- a/src/pages/tydzien4.html
+++ b/src/pages/tydzien4.html
@@ -53,7 +53,7 @@
           <h3 class="week-summary__title">
             Życie w pudełku: Box model (padding / border / margin)
           </h3>
-          <img src="../assets/img/boxmodel.png" alt="box model" class="box-model-img center" />
+          <img src="./assets/img/boxmodel.png" alt="box model" class="box-model-img center" />
 
           <h4 class="week-summary__title--subtitle">Padding - wewnętrzny margines</h4>
           <h5>Sposoby zapisu</h5>
@@ -96,7 +96,7 @@
         </article>
         <article class="week-summary">
           <h3 class="week-summary__title">Block – Element – Modifier</h3>
-          <img class= "center" src="../assets/img/bemDescription.png" alt="Bem description" />
+          <img class= "center" src="./assets/img/bemDescription.png" alt="Bem description" />
           <h4 class="week-summary__title--subtitle">Dlaczego?</h4>
           <ul>
             <li>
@@ -110,7 +110,7 @@
             <li>Stylowanie kilkoma klasami, powtarzające się nazwy</li>
           </ul>
           <h4 class="week-summary__title--subtitle">BEM (jak na dłoni)</h4>
-          <img src="../assets/img/bemHand.png" alt="Obrazek dłoni" class="center" />
+          <img src="./assets/img/bemHand.png" alt="Obrazek dłoni" class="center" />
         </article>
         <article class="week-summary">
           <h3 class="week-summary__title">DOMowe przedszkole</h3>
