--- a/src/pages/tydzien5.html
+++ b/src/pages/tydzien5.html
@@ -30,7 +30,7 @@
           <h3 class="week-summary__title">Klan</h3>
           <h4>Dlaczego linki są domyślnie formatowane?</h4>
           <p>Ponieważ przeglądarka ma swoje domyślne formatowanie.</p>
-          <img src="../assets/img/LinksDefaultStyle.png"
+          <img src="./assets/img/LinksDefaultStyle.png"
             alt="Domyślny styling z przeglądarki"
           />
           <h4>Inherit</h4>
