--- a/src/pages/tydzien6.html
+++ b/src/pages/tydzien6.html
@@ -85,7 +85,7 @@
       </article>
       <article class="week-summary">
         <h3 class="week-summary__title">CSS: Grid</h3>
-        <img src="../assets/img/grid.png" alt="Grid line">
+        <img src="./assets/img/grid.png" alt="Grid line">
         <p>Własności gridowe:
           <ul>
             <li><b>grid-template-columns</b>: - definicja kolumn (wartości podajemy po spacji)</li>
