Key improvements made: 1. Added responsive breakpoints for better mobile display Improved grid layout with more flexible column sizing Added box shadows and border radius for depth Enhanced typography and spacing Improved header styling with an underline effect Added proper padding and margins Made the layout more centered and contained Improved footer styling Added CSS variables for shadow and border-radius Improved nested SCSS structure

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pl">
+<html lang="en">
   <head>
     ${require('../partials/head.html')}
   </head>
@@ -10,22 +10,24 @@
     </header>
     <main class="welcomePage">
       <header class="main-heading">
-        <h1 class="main-heading--JS">Łukasz Granica - strona domowa z kursu WTF</h1>
+        <h1 class="main-heading--JS">Lukasz Granica Homepage</h1>
       </header>
       <section class="welcomeNote">
-        <h2 class="secondary-heading">Kim Jestem?</h2>
+        <h2 class="secondary-heading">Who Am I?</h2>
         <p>
-          Hej! Na codzień pracuję jako programista C#, ale pełnię również rolę
-          scrum mastera w firmie Banqsoft. Poza tym lubię grać w piłkę i
-          trenować na siłowni.
+          Hi! I'm a .NET Developer and Software Architect with experience as a Team Lead 
+          and Scrum Master. I'm passionate about coding and software architecture. 
+          Through this blog, I aim to share my knowledge in an easy-to-understand way.
           <br />
-          Mam nadzieję, że znajdziesz na tej stronie, wiele przydatnych rzeczy.
+          When I'm not coding, you can find me playing football or working out at the gym.
+          <br />
+          I hope you'll find plenty of useful resources on this site!
         </p>
       </section>
-      <img src="./assets/img/LukaszMateuszGranica_BW.png" alt="Uśmiechnięty Łukasz" class="aside" />
+      <img src="./assets/img/LukaszMateuszGranica_BW.png" alt="Smiling Lukasz" class="aside" />
     </main>
     <footer class="footer">
-      Strona domowa Łukasza Granicy.
+      Lukasz Granica's Homepage
     </footer>
   </body>
 </html>
