Add tags to page

--- a/src/pages/geeks-club-week1.html
+++ b/src/pages/geeks-club-week1.html
@@ -10,7 +10,14 @@
     <main>
       <h1 class="main-heading">Geeks Club - Summary</h1>
       <article class="article">
-        <h2><a href="https://devblogs.microsoft.com/visualstudio/organize-your-breakpoints-like-a-pro/">Organize Your Breakpoints like a pro</a></h2>
+        <div class="article-header">
+          <h2><a href="https://devblogs.microsoft.com/visualstudio/organize-your-breakpoints-like-a-pro/">Organize Your Breakpoints like a pro</a></h2>
+          <div class="article-tags">
+            <span class="tag">Visual Studio</span>
+            <span class="tag">Debugging</span>
+            <span class="tag">Breakpoints</span>
+          </div>
+        </div>
         <p>
           The article discusses a new feature in Visual Studio 2022 that enhances the management of breakpoints through breakpoint groups. This feature allows users to create custom collections of breakpoints, enabling easier organization and control during debugging.
         </p>
@@ -26,8 +33,15 @@
         <h3>Example of usage:</h3>
         <p>
           <img src="./assets/img/breakpointGroup.jpeg" alt="Breakpoint Groups">
-          <h2><a href="https://devblogs.microsoft.com/visualstudio/bringing-code-cleanup-on-save-to-visual-studio-2022-17-1-preview-2/">Code Cleanup on Save</a></h2>
         </p>
+
+        <div class="article-header">
+          <h2><a href="https://devblogs.microsoft.com/visualstudio/bringing-code-cleanup-on-save-to-visual-studio-2022-17-1-preview-2/">Code Cleanup on Save</a></h2>
+          <div class="article-tags">
+            <span class="tag">Visual Studio</span>
+            <span class="tag">Code Quality</span>
+          </div>
+        </div>
         <p>
           It had been very frustrating to get failed build, because of unnecessary usings, since we needed to wait 10min to get result that build failed. Then remove usings and run again, so we will get tests results in 0.5h later than expected.
         </p>
@@ -47,7 +61,14 @@
           <img src="./assets/img/RemoveUsings.jpeg" alt="Remove usings">
         </p>
 
-        <h2><a href="https://github.com/wsr-publishing/azure-poor-formatter">Azure Poor Formatter</a></h2>
+        <div class="article-header">
+          <h2><a href="https://github.com/wsr-publishing/azure-poor-formatter">Azure Poor Formatter</a></h2>
+          <div class="article-tags">
+            <span class="tag">SQL</span>
+            <span class="tag">Azure Data Studio</span>
+            <span class="tag">Formatting</span>
+          </div>
+        </div>
         <p>
           The Azure Poor Formatter is a Visual Studio Code extension designed to format T-SQL code within Azure Data Studio. It utilizes the Poor Man's T-SQL Formatter to enhance the readability and organization of SQL scripts.
         </p>
